examples/front-proxy/service-envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:443",
      "filters": [
        {
          "type": "read",
          "name": "client_ssl_auth",
          "config": {
          "auth_api_cluster": "cert",
          "stat_prefix": "foo",
          "refresh_delay_ms": 6000
          
  }
        },
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/service",
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ],
      "ssl_context":{
          "cert_chain_file": "/etc/cert.pem",
          "private_key_file": "/etc/cert.key"
      }
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "local_service",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8080"
          }
        ]
      },
      {
        "name": "cert",
                "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://cert:8002"
          }
        ]
      }

    ]
  }
}
